Se agrego nuevas lineas de codigo para la direccion url del boton help

--- a/insert_coordinates/manifest.json
+++ b/insert_coordinates/manifest.json
@@ -9,6 +9,9 @@
     "css": [
         "css/main.css"
     ],
+    "default_options": {
+        "urlHelp": "http://geo.gob.bo/?-Ayuda-45-"
+    },
     "i18n": { 
         "en": {
             "title_window":     "Insert coordinates",
